--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -14,6 +14,7 @@ services:
       - rsa_priv_key
       - smtp_psw
       - indigonotes_key
+      - courier_key
 
 secrets:
   supa_key:
@@ -28,3 +29,5 @@ secrets:
     file: myprivatekey.pem
   indigonotes_key:
     environment: indigonotes_api_key
+  courier_key:
+    environment: courier_auth_token
