--- a/docker/environment.yml
+++ b/docker/environment.yml
@@ -36,19 +36,26 @@ dependencies:
       - anyio==4.8.0
       - attrs==25.3.0
       - authlib==1.5.1
+      - azure-ai-documentintelligence==1.0.1
+      - azure-core==1.32.0
+      - azure-identity==1.21.0
       - backports-tarfile==1.2.0
+      - beautifulsoup4==4.13.3
       - bidict==0.23.1
       - build==1.2.2.post1
       - certifi==2025.1.31
       - cffi==1.17.1
       - charset-normalizer==3.4.1
       - click==8.1.8
+      - cobble==0.1.4
       - cryptography==44.0.2
+      - defusedxml==0.7.1
       - deprecation==2.1.0
       - distro==1.9.0
       - dnspython==2.7.0
       - docutils==0.21.2
       - email-validator==2.2.0
+      - et-xmlfile==2.0.0
       - fastapi==0.115.11
       - fastapi-cli==0.0.7
       - ffmpy==0.5.0
@@ -56,8 +63,8 @@ dependencies:
       - frozenlist==1.5.0
       - fsspec==2025.3.0
       - gotrue==2.11.4
-      - gradio==5.21.0
-      - gradio-client==1.7.2
+      - gradio==5.22.0
+      - gradio-client==1.8.0
       - greenlet==3.1.1
       - groovy==0.1.2
       - gunicorn==23.0.0
@@ -72,42 +79,60 @@ dependencies:
       - id==1.5.0
       - idna==3.10
       - importlib-metadata==8.6.1
+      - isodate==0.7.2
       - itsdangerous==2.2.0
       - jaraco-classes==3.4.0
       - jaraco-context==6.0.1
       - jaraco-functools==4.1.0
       - jeepney==0.9.0
       - jinja2==3.1.6
+      - jiter==0.9.0
       - keyring==25.6.0
       - lazy-loader==0.4
+      - lxml==5.3.1
       - mako==1.3.9
+      - mammoth==1.9.0
       - markdown-it-py==3.0.0
+      - markdownify==1.1.0
+      - markitdown==0.0.2
       - markupsafe==2.1.5
       - mdurl==0.1.2
       - more-itertools==10.6.0
+      - msal==1.32.0
+      - msal-extensions==1.3.1
       - multidict==6.1.0
       - naked==0.1.32
       - nh3==0.2.21
       - numpy==2.2.3
+      - olefile==0.47
+      - openai==1.68.0
+      - openpyxl==3.1.5
       - orjson==3.10.15
       - packaging==24.2
       - pandas==2.2.3
+      - pathvalidate==3.2.3
+      - pdfitdown==0.0.4
+      - pdfminer-six==20240706
       - pillow==11.1.0
       - platformdirs==4.3.6
       - postgrest==0.19.3
       - propcache==0.3.0
       - psutil==6.1.1
+      - puremagic==1.28
       - pycparser==2.22
       - pycryptodome==3.21.0
       - pydantic==2.10.6
       - pydantic-core==2.27.2
       - pydub==0.25.1
       - pygments==2.19.1
+      - pyjwt==2.10.1
+      - pymupdf==1.25.1
       - pyproject-hooks==1.2.0
       - python-dateutil==2.9.0.post0
       - python-dotenv==1.0.1
       - python-engineio==4.11.2
       - python-multipart==0.0.20
+      - python-pptx==1.0.2
       - python-socketio==5.12.1
       - pytz==2025.1
       - pyyaml==6.0.2
@@ -129,6 +154,9 @@ dependencies:
       - simple-websocket==1.1.0
       - six==1.17.0
       - sniffio==1.3.1
+      - sounddevice==0.5.1
+      - soupsieve==2.6
+      - speechrecognition==3.14.1
       - sqlalchemy==2.0.39
       - sqlmodel==0.0.24
       - starlette==0.46.1
@@ -138,8 +166,10 @@ dependencies:
       - supabase==2.13.0
       - supafunc==0.9.3
       - tabulate==0.9.0
+      - termcolor==2.5.0
       - tomlkit==0.13.2
       - tqdm==4.67.1
+      - trycourier==6.2.1
       - twine==6.1.0
       - typer==0.15.2
       - typing-extensions==4.12.2
@@ -152,5 +182,8 @@ dependencies:
       - websockets==14.2
       - wrapt==1.17.2
       - wsproto==1.2.0
+      - xlrd==2.0.1
+      - xlsxwriter==3.2.2
       - yarl==1.18.3
+      - youtube-transcript-api==1.0.2
       - zipp==3.21.0
