--- a/docker/compose.yaml
+++ b/docker/compose.yaml
@@ -14,6 +14,8 @@ services:
       - rsa_priv_key
       - indigonotes_key
       - courier_key
+    networks:
+      - nginxproxymanager_default
 
 secrets:
   supa_key:
@@ -28,3 +30,7 @@ secrets:
     environment: indigonotes_api_key
   courier_key:
     environment: courier_auth_token
+
+networks:
+  nginxproxymanager_default:
+    external: true
